--- a/crud_back/src/main/resources/application.properties
+++ b/crud_back/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=8081
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cruddemo
+spring.datasource.url=jdbc:mysql://database-1.cm186kguus78.us-east-1.rds.amazonaws.com:3306/cruddemo
 
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=Ranjit0987
+spring.datasource.password=Ranjit0987
 
 spring.jpa.hibernate.ddl-auto=update
 
